force-app/main/default/objects/Lab_Result__c/Lab_Result__c.object-meta.xml
<CustomObject>
    <description>Hospital Management System object for Lab Result.</description>
    <label>Lab Result</label>
    <nameField>
        <displayFormat>LABRES-{00000}</displayFormat>
        <label>Lab Result Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Lab Results</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>