force-app/main/default/objects/Lab_Result__c/fields/Admission__c.field-meta.xml
<CustomField>
    <fullName>Admission__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Admission</label>
    <referenceTo>Admission__c</referenceTo>
    <relationshipLabel>Lab Results</relationshipLabel>
    <relationshipName>Lab_Results</relationshipName>
    <type>Lookup</type>
</CustomField>