force-app/main/default/objects/Lab_Result__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Requested By</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Requested Lab Results</relationshipLabel>
    <relationshipName>Requested_Lab_Results</relationshipName>
    <type>Lookup</type>
</CustomField>