force-app/main/default/objects/Lab_Result__c/fields/Lab_Test__c.field-meta.xml
<CustomField>
    <fullName>Lab_Test__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Lab Test</label>
    <referenceTo>Lab_Test__c</referenceTo>
    <relationshipLabel>Lab Results</relationshipLabel>
    <relationshipName>Lab_Results</relationshipName>
    <type>Lookup</type>
</CustomField>