force-app/main/default/objects/Lab_Result__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Lab Results</relationshipLabel>
    <relationshipName>Lab_Results</relationshipName>
    <type>Lookup</type>
</CustomField>